fix button text align

--- a/src/components/FeaturedMovie/styles.module.css
+++ b/src/components/FeaturedMovie/styles.module.css
@@ -68,11 +68,18 @@
   display: inline-block;
   font-size: 20px;
   font-weight: bold;
-  padding: 15px 25px;
+  padding: 18px 30px;
   border-radius: 5px;
   text-decoration: none;
   margin-right: 10px;
   transition: all ease 0.2s;
+}
+
+.featuredWatchButton div,
+.featuredMyListButton div {
+  display: flex;
+  align-items: center;
+  justify-content: baseline;
 }
 
 .featuredWatchButton {
